samples/_failures_safe/1761170672_0d6d9f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aa1b26ef.c: In function ‘main’:
./samples/SAFE/__tmp_aa1b26ef.c:147:24: error: missing terminating " character
  147 |                 printf("Matrix transpose
      |                        ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_aa1b26ef.c:147:17: error: expected expression at end of input
  147 |                 printf("Matrix transpose
      |                 ^~~~~~
./samples/SAFE/__tmp_aa1b26ef.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa1b26ef.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa1b26ef.c:147:17: error: expected declaration or statement at end of input
